# ELECTRONIC_NET

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
electronics_chain/: asgi.py  filters.py  permissions.py  settings.py  urls.py  wsgi.py
electronics_chain/base/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
electronics_chain/base/migrations/: 0001_initial.py  0002_contactmodel.py  0003_alter_products_release_date.py
electronics_chain/core/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
electronics_chain/core/migrations/: 0001_initial.py  0002_alter_user_last_name_alter_user_role.py
electronics_chain/factory/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
electronics_chain/factory/migrations/: 0001_initial.py  0002_alter_factorystore_options.py
electronics_chain/individual_entrepreneur/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
electronics_chain/individual_entrepreneur/migrations/: 0001_initial.py
electronics_chain/retailer/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
electronics_chain/retailer/migrations/: 0001_initial.py
